# memos

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  README.md  README_CN.md
docs/: ARCHITECTURE.md  INTEGRATION.md  SPEC.md
src/: config.rs  lib.rs  main.rs
src/api/: http.rs  mcp.rs  mod.rs
src/cognitive/: amem.rs  conflict.rs  extract.rs  feedback.rs  graph.rs  mod.rs
src/hooks/: events.rs  mod.rs
src/lifecycle/: decay.rs  governance.rs  mod.rs  reflect.rs
src/retrieval/: graph.rs  intent.rs  mod.rs  rerank.rs  search.rs
src/storage/: frame.rs  mod.rs  relations.rs  vault.rs
