[package]
name = "memos"
version = "0.1.0"
edition = "2021"
description = "AI Agent Memory System: Memvid storage + ClawMem cognitive engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zinsser-1686/memos"
homepage = "https://github.com/zinsser-1686/memos"

[dependencies]
# Storage (Memvid integration)
memvid-core = { version = "2.0", features = ["lex", "vec", "temporal_track"] }

# Full-text search
tantivy = "0.22"

# Vector operations
ndarray = "0.16"
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQLite sidecar for relations/entities
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async trait
async-trait = "0.1"

# Once cell
once_cell = "1.19"

# Regex (for conflict detection patterns)
regex = "1.10"

# Encoding (for BM25 text processing)
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[[bin]]
name = "memos"
path = "src/main.rs"
